--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -2,19 +2,31 @@
 <html>
 
 <head>
-    <title>index</title>
+  <title>index</title>
 </head>
+
 <body>
 
-<h1 style="text-align:center;">index</h1>
+  <h1 style="text-align:center;">---</h1>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        let socket = io();
-        socket.on("index", function (data) {
-
-        });
-    </script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    let socket = io();
+    socket.on("index", function (data) {
+        console.log('socket_data', data);
+    });
+    // socket.on("disconnect", (reason) => {
+    //   //   console.log('socket.disconnect');
+    //   if (reason === "io server disconnect") {
+    //     // the disconnection was initiated by the server, you need to reconnect manually
+    //     socket.connect();
+    //   }
+    //   // else the socket will automatically try to reconnect
+    // });
+    // setTimeout(() => {
+    //   socket.disconnect(true), 5000
+    // });
+  </script>
 </body>
 
 </html>
